force-app/main/default/objects/ProductComponent__c/ProductComponent__c.object-meta.xml
<CustomObject>
    <label>Product Component</label>
    <nameField>
        <displayFormat>IGC-{000000000}</displayFormat>
        <label>Item Group Component Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Components</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>