force-app/main/default/objects/ProductComponent__c/fields/MainProduct__c.field-meta.xml
<CustomField>
    <fullName>MainProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Components</relationshipLabel>
    <relationshipName>Product_Relations2</relationshipName>
    <type>Lookup</type>
</CustomField>