force-app/main/default/objects/ProductComponent__c/fields/MissingComponentPrice__c.field-meta.xml
<CustomField>
    <fullName>MissingComponentPrice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Missing Component Price</label>
    <type>Checkbox</type>
</CustomField>