force-app/main/default/objects/ProductComponent__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Leave empty if this is the head item of the Item Group.</description>
    <inlineHelpText>Leave empty if this is the head item of the Item Group.</inlineHelpText>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please do not enter the Head item group product as a product!</errorMessage>
        <filterItems>
            <field>Product2.Id</field>
            <operation>notEqual</operation>
            <valueField>$Source.MainProduct__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Component of Products</relationshipLabel>
    <relationshipName>Product_Relations3</relationshipName>
    <type>Lookup</type>
</CustomField>