force-app/main/default/objects/ProductComponent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MainProduct__c</columns>
    <columns>Subsidiary__c</columns>
    <columns>Type__c</columns>
    <columns>Product__c</columns>
    <columns>ExternalId__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>